[package]
name = "s2n-tls-core"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.63.0"
repository = "https://github.com/aws/s2n-tls"
license = "Apache-2.0"

[features]
testing = []

[dependencies]
s2n-quic-core = { version = "0.64.0", features = ["testing"] }
tracing = "0.1"
