[package]
name = "s2n-tls-hyper"
description = "A compatbility layer for using the hyper HTTP library with s2n-tls"
version = "0.0.1"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.63.0"
repository = "https://github.com/aws/s2n-tls"
license = "Apache-2.0"

[features]
default = []

[dependencies]
s2n-tls = { version = "=0.2.7", path = "../s2n-tls" }
s2n-tls-tokio = { version = "=0.2.7", path = "../s2n-tls-tokio" }
hyper = { version = "1" }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
tower-service = { version = "0.3" }
http = { version= "1" }

tokio-rustls = { version = "0.26" }

[dev-dependencies]
tokio = { version = "1", features = [ "io-std", "io-util", "macros", "net", "rt-multi-thread", "test-util", "time"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }
http-body-util = "0.1"
bytes = "1"
